Create the installable bundle using JDK 16 (#57)
* Switched to Gradle 7 milestone release that supports JDK 16

* Updated Travis build status badge for JDK-16 branch

* Minor formatting fix

* Use OpenJDK 16 for TravisCI

* Started switch to JDK 16 jpackage tool

* Fixed a typo in the windows batch file

* Removed the task to check the bundling environment

* Updated to Gradle v7.0 RC1

* Removed obsolete Windows bundling config

* Improved Windows bundler script

* Removed unnecessary script argument

* Removed obsolete Inno config file

* Added file associations into the windows bundling

* Added missing file associations argument for windows bundler

* Fixed windows icon path problem

* Added inputs and outputs to the create bundle task

* Simplified resource processing for file associations

* Corrected a typo

* Moved module list into gradle file

* Pared down the modules that are added to the bundle

* Updated the packaging readme file for the new bundle build process

* Added option to skip signing the bundle

* Consolidated Gradle task dependencies

* Updated the main readme

* Fixed module parameter problem in Windows script

* Delete the bundle directory first before creating the bundle

* Added missing inputs on jars from gradle bundle task

* Fixed problems with paths containing spaces in bundler script

* Added warning about paths containing spaces on Windows

* Removed commented out checkstyle workaround

* Fixed problem with module list on Windows

* Restored the build status branch ready for merge